<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/magiccard">
    <TextView
        android:id="@+id/textViewTitleTopS4p"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="63dp"
        android:text="@string/app_title"
        android:background="@color/lightblue"
        android:textSize="25sp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:text="@string/choose_format"
        android:gravity="bottom|center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/button_standard"
        android:layout_width="285dp"
        android:layout_height="82dp"
        android:onClick="goToStandardActivity"
        android:text="@string/standard"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/brown"
        app:backgroundTint="@color/lightblue"/>

    <Button
        android:id="@+id/button_commander"
        android:layout_width="285dp"
        android:layout_height="84dp"
        android:onClick="goToCommanderActivity"
        android:text="@string/commander"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/brown"
        app:backgroundTint="@color/lightblue"
        />
</LinearLayout>