<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Std4PlyActivity">

    <TextView
        android:id="@+id/textViewTitleTopS4p"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:text="@string/standard"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewBlankTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/st_4pl_row2_layout"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:orientation="horizontal"
        android:rotation="180">

        <Button
            android:id="@+id/st_4pl_p1_button_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/minus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />

        <TextView
            android:id="@+id/st_4pl_p1_life"
            android:layout_width="73dp"
            android:layout_height="143dp"
            android:gravity="center"
            android:text="@string/twenty"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/st_4pl_p1_button_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/plus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />

        <TextView
            android:id="@+id/textView_blsp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/st_4pl_p2_button_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/minus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />

        <TextView
            android:id="@+id/st_4pl_p2_life"
            android:layout_width="73dp"
            android:layout_height="143dp"
            android:gravity="center"
            android:text="@string/twenty"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/st_4pl_p2_button_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/plus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/st_4pl_row1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:rotation="180">

        <TextView
            android:id="@+id/st_4p_p1_name"
            android:layout_width="100dp"
            android:layout_height="142dp"
            android:layout_weight="1"
            android:background="@drawable/red"
            android:gravity="center"
            android:onClick="playerName"
            android:text="@string/p1"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView_blsp5"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/st_4p_p2_name"
            android:layout_width="100dp"
            android:layout_height="142dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="playerName"
            android:background="@drawable/black"
            android:text="@string/p2"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_blsp_mid"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="@color/lightblue" />

    <LinearLayout
        android:id="@+id/st_4pl_row3_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/st_4p_p3_name"
            android:layout_width="100dp"
            android:layout_height="142dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="playerName"
            android:background="@drawable/green"
            android:text="@string/p3"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView_p3_life"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/st_4p_p4_name"
            android:layout_width="100dp"
            android:layout_height="142dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="playerName"
            android:background="@drawable/blue"
            android:text="@string/p4"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/st_4pl_row4_layout"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/st_4pl_p3_button_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/minus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />

        <TextView
            android:id="@+id/st_4pl_p3_life"
            android:layout_width="73dp"
            android:layout_height="143dp"
            android:gravity="center"
            android:text="@string/twenty"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/st_4pl_p3_button_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/plus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />

        <TextView
            android:id="@+id/textView_blsp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/st_4pl_p4_button_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/minus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />

        <TextView
            android:id="@+id/st_4pl_p4_life"
            android:layout_width="73dp"
            android:layout_height="143dp"
            android:gravity="center"
            android:text="@string/twenty"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/st_4pl_p4_button_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="incrementDecrement"
            android:paddingHorizontal="0dp"
            android:text="@string/plus"
            android:textColor="@color/lightblue"
            android:textSize="30sp"
            app:backgroundTint="@color/brown" />
    </LinearLayout>

</LinearLayout>